fixed contact form overflow issue and make nav links not highlightable

--- a/src/Styles/ContactForm.scss
+++ b/src/Styles/ContactForm.scss
@@ -8,6 +8,7 @@
 }
 
 .contact-form {
+  overflow-y: hidden;
   display: flex;
   justify-content: center;
   flex-direction: column;
